# Cue

./: .gitignore  README.md  WEB_README.md  config.py  deploy-production.sh  env.example  nginx-cue-http.conf  nginx-cue-simple.conf  package-lock.json  package.json  parameter_mapper.py  pyproject.toml  sentiment_analyzer.py  setup.sh
backend/: art_generator.py  config.py  main.py  noise_algorithms.py  pyproject.toml  server.py
docs/: GITHUB_GALLERY_SETUP.md
examples/: README.md  update_favicon.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
gallery/2025-07-10T17-07-26-452432_2960be46/: metadata.json
ops/nginx/: .env.nginx.example  site.conf.template
ops/nginx/scripts/: install.sh
ops/systemd/: env.systemd.example  run.sh
ops/systemd/scripts/: install.sh
ops/systemd/templates/: service.service.template
scripts/: README.md  deploy-production.js  favicon_webhook.js  favicon_webhook.py
